--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -96,6 +96,7 @@ steps:
 #     packagePublishDescription: 'vx Field Titanium Framework $(Build.BuildNumber).GA.SSL'
 
 - task: Bash@3
+  displayName: 'Publish zip file To Proget Feeds'
   inputs:
     targetType: 'inline'
     script: |
