--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -76,6 +76,10 @@ steps:
       npm run cleanbuild
       # List the contents of the dist folder
       ls -al $(System.DefaultWorkingDirectory)/dist
+      unzip $(System.DefaultWorkingDirectory)/dist/mobilesdk-$(Build.BuildNumber)-osx.zip
+      cd $(System.DefaultWorkingDirectory)/dist/mobilesdk/osx/$(Build.BuildNumber)
+      ls -al $(System.DefaultWorkingDirectory)/dist 
+      zip -r $(System.DefaultWorkingDirectory)/dist/mobilesdk/osx/$(Build.BuildNumber).GA.MAINTAIN.zip *   
 
 - task: PublishPipelineArtifact@1
   displayName: 'Publish zip file as an artifact'
@@ -101,6 +105,6 @@ steps:
     targetType: 'inline'
     script: |
     
-      curl https://proget.accruentsystems.com/upack/vxf_core/upload/Titanium_MAINTAIN/$(Build.BuildNumber) --user progetservice@accruentsystems.com:$PROGET_PASSWORD --upload-file $(System.DefaultWorkingDirectory)/dist/mobilesdk-$(Build.BuildNumber)-osx.zip
+      curl https://proget.accruentsystems.com/upack/vxf_core/upload/Titanium_MAINTAIN/$(Build.BuildNumber) --user progetservice@accruentsystems.com:$PROGET_PASSWORD --upload-file $(System.DefaultWorkingDirectory)/dist/mobilesdk/osx/$(Build.BuildNumber).GA.MAINTAIN.zip
   env:
     PROGET_PASSWORD: $(Proget_Password_Secret)
